fix text align and padding

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,1 +1,1 @@
-*{margin:0;padding:0;box-sizing:border-box;outline:none;font-family:"Poppins", sans-serif;font-size:1em;text-decoration:none}body{overflow-x:hidden}.p-large{padding:2rem 0}.p-small{padding:0.8rem 0}
+*{margin:0;padding:0;box-sizing:border-box;outline:none;font-family:"Poppins", sans-serif;font-size:1em;text-decoration:none}.p-large{padding:2rem 0}.p-small{padding:0.8rem 0}
